--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.3",
     "mongoose-dynamic-querybuilder": "^1.0.2",
     "ts-node-dev": "^2.0.0",
